ファイル作成

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
           <div class="fv__logo">
             <img src="./img/logo-2.svg" alt="自然の恵み農園" />
           </div>
-          <h1 class="fv__catch">
-            自然の恵みを感じ、<br class="fv__catch-break" />豊かな未来を。
-          </h1>
+          <h1 class="fv__catch">自然の恵みを感じ、豊かな未来を。</h1>
         </div>
         <a href="#" class="fv__scroll"> scroll</a>
         <article>
@@ -61,6 +59,5 @@
         </article>
       </div>
     </main>
-    <script src="./js/script.js"></script>
   </body>
 </html>
