--- a/index.html
+++ b/index.html
@@ -60,6 +60,60 @@
           </a>
         </article>
       </div>
+      <section>
+        <div class="about container">
+          <div class="about__img">
+            <img
+              src="./img/about-image01.png"
+              width="200"
+              height="252"
+              alt="山羊の写真"
+            />
+          </div>
+          <div class="about__img">
+            <img
+              src="./img/about-image02.png"
+              width="181"
+              height="217"
+              alt="トマトの写真"
+            />
+          </div>
+          <div class="about__img">
+            <img
+              src="./img/about-image03.png"
+              width="200"
+              height="200"
+              alt="笑う職員の写真"
+            />
+          </div>
+          <div class="about__img">
+            <img
+              src="./img/about-image04.png"
+              width="235"
+              height="269"
+              alt="牛の写真"
+            />
+          </div>
+          <h2 class="about__heading">
+            <img src="./img/logo.svg" alt="自然の恵み農園" />
+          </h2>
+          <p class="about__text">
+            自然の恵み農園は、<br />
+            自然の恵みと動物の尊さが調和する<br class="sp-only" />
+            特別な場所です。<br />
+            新鮮で美味しい農産物を栽培し、<br class="sp-only" />
+            心温まる動物たちと触れ合える場所<br class="sp-only" />
+            でもあります。
+          </p>
+          <p class="about__text">
+            自然の恵みを受け、<br class="sp-only" />
+            動物たちとの特別なひとときを<br class="sp-only" />
+            楽しんでいただける場所として、<br />
+            私たちは誇りを持って活動をしています。<br />
+            一緒に自然と動物の美しさを共有しましょう。
+          </p>
+        </div>
+      </section>
     </main>
     <script src="./js/script.js"></script>
   </body>
