活動紹介htmlのみ作成

--- a/index.html
+++ b/index.html
@@ -114,6 +114,29 @@
           </p>
         </div>
       </section>
+      <section>
+        <div class="introduction">
+          <div class="introduction__inner">
+            <h2 class="section__heading">活動紹介</h2>
+            <div class="introduction__tabs-wrapper">
+              <a href="#" class="introduction__tabs">
+                <h3>農園</h3>
+              </a>
+              <a href="#" class="introduction__tabs">
+                <h3>牧場</h3>
+              </a>
+              <a href="#" class="introduction__tabs">
+                <h3>オンライン販売</h3>
+              </a>
+            </div>
+            <p class="introduction__paragraph">
+              私たちは、「持続可能な農業」を掲げて、自然の恵みに感謝しながら、農作物を育てています。<br />
+              無農薬で、体にも環境にも優しく、季節ごとに異なる品種を育て、提供しています。<br />
+              ぜひ一度、農園にお越し頂き、自分の手で収穫した新鮮な野菜、果物をお召し上がりください。
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./js/script.js"></script>
   </body>
