よくある質問途中まで

--- a/index.html
+++ b/index.html
@@ -117,23 +117,58 @@
       <section>
         <div class="introduction">
           <div class="introduction__inner">
-            <h2 class="section__heading">活動紹介</h2>
+            <h2 class="introduction__heading section__heading">活動紹介</h2>
             <div class="introduction__tabs-wrapper">
-              <a href="#" class="introduction__tabs">
+              <a href="#" class="introduction__tab selected">
                 <h3>農園</h3>
               </a>
-              <a href="#" class="introduction__tabs">
+              <a href="#" class="introduction__tab">
                 <h3>牧場</h3>
               </a>
-              <a href="#" class="introduction__tabs">
+              <a href="#" class="introduction__tab">
                 <h3>オンライン販売</h3>
               </a>
             </div>
-            <p class="introduction__paragraph">
-              私たちは、「持続可能な農業」を掲げて、自然の恵みに感謝しながら、農作物を育てています。<br />
-              無農薬で、体にも環境にも優しく、季節ごとに異なる品種を育て、提供しています。<br />
-              ぜひ一度、農園にお越し頂き、自分の手で収穫した新鮮な野菜、果物をお召し上がりください。
-            </p>
+            <div class="introduction__area">
+              <p class="introduction__paragraph">
+                私たちは、　「持続可能な農業」を掲げて、自然の恵みに感謝しながら、農作物を育てています。<br />
+                無農薬で、体にも環境にも優しく、季節ごとに異なる品種を育て、提供しています。<br />
+                ぜひ一度、農園にお越し頂き、自分の手で収穫した新鮮な野菜、果物をお召し上がりください。
+              </p>
+              <div class="introduction__slider">
+                <div class="introduction__slide">
+                  <img src="./img/work-nouen01.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="faq">
+          <h2 class="faq__heading setion__heading">よくあるご質問</h2>
+          <div class="faq__item">
+            <button type="button" class="faq__question">
+              <span>Q</span><span>農園の野菜や果物は有機栽培ですか？</span>
+            </button>
+            <div class="faq__answer">
+              <p>
+                はい、私たちの農園では有機栽培の原則に従って野菜と果物を栽培しています。<br />
+                化学肥料や農薬を極力使用せず、土壌と作物の健康を第一に考えております。
+              </p>
+            </div>
+          </div>
+          <div class="faq__item">
+            <button type="button" class="faq__question">
+              <span>Q</span
+              ><span>農園での見学や体験ツアーは行っていますか？</span>
+            </button>
+            <div class="faq__answer">
+              <p>
+                はい、農園での見学や体験ツアーを随時開催しています。
+                農場の日常や農作業を親しみやすく説明し、実際に農園での体験を楽しむことができます。
+              </p>
+            </div>
           </div>
         </div>
       </section>
