よくあるご質問途中まで

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
               <p class="fv__news-heading">news</p>
               <time class="fv__news-date">YYYY.MM.DD</time>
             </div>
-            <h3 class="fv__news-title">
+            <p class="fv__news-title">
               タイトルが入ります。タイトルが入ります。
-            </h3>
+            </p>
           </a>
         </article>
       </div>
       <section>
-        <div class="about container">
+        <div class="about container" id="about">
           <div class="about__img">
             <img
               src="./img/about-image01.png"
@@ -115,7 +115,7 @@
         </div>
       </section>
       <section>
-        <div class="introduction">
+        <div class="introduction" id="introduction">
           <div class="introduction__inner">
             <h2 class="introduction__heading section__heading">活動紹介</h2>
             <div class="introduction__tabs-wrapper">
@@ -145,13 +145,15 @@
         </div>
       </section>
       <section>
-        <div class="faq">
-          <h2 class="faq__heading setion__heading">よくあるご質問</h2>
+        <div class="faq container" id="faq">
+          <h2 class="faq__heading section__heading">よくあるご質問</h2>
           <div class="faq__item">
             <button type="button" class="faq__question">
-              <span>Q</span><span>農園の野菜や果物は有機栽培ですか？</span>
+              <span>Q</span>
+              <p>農園の野菜や果物は有機栽培ですか？</p>
             </button>
             <div class="faq__answer">
+              <span>A</span>
               <p>
                 はい、私たちの農園では有機栽培の原則に従って野菜と果物を栽培しています。<br />
                 化学肥料や農薬を極力使用せず、土壌と作物の健康を第一に考えております。
@@ -160,13 +162,53 @@
           </div>
           <div class="faq__item">
             <button type="button" class="faq__question">
-              <span>Q</span
-              ><span>農園での見学や体験ツアーは行っていますか？</span>
+              <span>Q</span>
+              <p>農園での見学や体験ツアーは行っていますか？</p>
             </button>
             <div class="faq__answer">
+              <span>A</span>
               <p>
-                はい、農園での見学や体験ツアーを随時開催しています。
+                はい、農園での見学や体験ツアーを随時開催しています。<br />
                 農場の日常や農作業を親しみやすく説明し、実際に農園での体験を楽しむことができます。
+              </p>
+            </div>
+          </div>
+          <div class="faq__item">
+            <button type="button" class="faq__question">
+              <span>Q</span>
+              <p>農園での見学や体験ツアーは行っていますか？</p>
+            </button>
+            <div class="faq__answer">
+              <span>A</span>
+              <p>
+                はい、農園での見学や体験ツアーを随時開催しています。<br />
+                農場の日常や農作業を親しみやすく説明し、実際に農園での体験を楽しむことができます。
+              </p>
+            </div>
+          </div>
+          <div class="faq__item">
+            <button type="button" class="faq__question">
+              <span>Q</span>
+              <p>オンラインで注文した農産物はどのように配送されますか？</p>
+            </button>
+            <div class="faq__answer">
+              <span>A</span>
+              <p>
+                オンラインで注文いただいた農産物は、専用の梱包で新鮮さを保ったまま、<br />
+                指定された配送先にお届けします。
+              </p>
+            </div>
+          </div>
+          <div class="faq__item">
+            <button type="button" class="faq__question">
+              <span>Q</span>
+              <p>農園で提供される季節ごとの野菜や果物の品種は何ですか？</p>
+            </button>
+            <div class="faq__answer">
+              <span>A</span>
+              <p>
+                春にはイチゴ、夏にはトマトや茄子、秋にはカボチャやリンゴ、冬にはブロッコリーやみかん<br />
+                など、季節に応じた野菜、果物を提供、収穫体験することができます。
               </p>
             </div>
           </div>
