--- a/index.html
+++ b/index.html
@@ -307,15 +307,17 @@
             <tr>
               <th>Googleマップ<br /><a href="#">拡大地図を表示</a></th>
               <td>
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3237.6072102590215!2d140.0589632757913!3d35.760457972561824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60227e5329d23245%3A0xd4cde63c28d3f984!2sFunabashi%20Andersen%20Park!5e0!3m2!1sen!2sjp!4v1721538976820!5m2!1sen!2sjp"
-                  width="100%"
-                  height="100%"
-                  style="border: 0"
-                  allowfullscreen=""
-                  loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"
-                ></iframe>
+                <div class="access__gmap-wrapper">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3237.6072102590215!2d140.0589632757913!3d35.760457972561824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60227e5329d23245%3A0xd4cde63c28d3f984!2sFunabashi%20Andersen%20Park!5e0!3m2!1sen!2sjp!4v1721538976820!5m2!1sen!2sjp"
+                    width="100%"
+                    height="100%"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
               </td>
             </tr>
           </table>
