--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="#about" class="header__link">私たちについて</a></li>
           <li><a href="#introduction" class="header__link">活動紹介</a></li>
           <li><a href="#faq" class="header__link">よくあるご質問</a></li>
-          <li><a href="#top-news" class="header__link">お知らせ</a></li>
+          <li><a href="./archive.html" class="header__link">お知らせ</a></li>
           <li><a href="#access" class="header__link">アクセス</a></li>
           <li>
             <a href="#top-contact" class="header__link--contact"
@@ -231,7 +231,9 @@
               季節の農作物のお知らせ、見学ツアーのご案内、<br class="pc-only" />
               オンライン販売セールのお知らせなど、自然の恵み農園の最新情報をお届けします。
             </p>
-            <a href="#" class="top-news__btn btn pc-only">view more</a>
+            <a href="./archive.html" class="top-news__btn btn pc-only"
+              >view more</a
+            >
           </div>
           <div class="top-news__inner">
             <ul>
@@ -288,7 +290,9 @@
               </li>
             </ul>
           </div>
-          <a href="#" class="top-news__btn btn sp-only">view more</a>
+          <a href="./archive.html" class="top-news__btn btn sp-only"
+            >view more</a
+          >
         </div>
       </section>
       <section>
@@ -397,11 +401,19 @@
           <nav class="footer__menu">
             <ul>
               <li><a href="#" class="footer__link-item">ホーム</a></li>
-              <li><a href="#" class="footer__link-item">私たちについて</a></li>
-              <li><a href="#" class="footer__link-item">活動紹介</a></li>
-              <li><a href="#" class="footer__link-item">よくあるご質問</a></li>
-              <li><a href="#" class="footer__link-item">お知らせ</a></li>
-              <li><a href="#" class="footer__link-item">アクセス</a></li>
+              <li>
+                <a href="#about" class="footer__link-item">私たちについて</a>
+              </li>
+              <li>
+                <a href="#introduction" class="footer__link-item">活動紹介</a>
+              </li>
+              <li>
+                <a href="#faq" class="footer__link-item">よくあるご質問</a>
+              </li>
+              <li>
+                <a href="./archive.html" class="footer__link-item">お知らせ</a>
+              </li>
+              <li><a href="#access" class="footer__link-item">アクセス</a></li>
             </ul>
           </nav>
           <ul class="footer__sns">
