詳細ページ途中まで

--- a/single.html
+++ b/single.html
@@ -75,7 +75,15 @@
               alt="タイトルが入ります。タイトルが入ります。"
             />
           </div>
-          <div class="toc"></div>
+          <div class="toc">
+            <h2 class="toc__heading">目次</h2>
+            <ol>
+              <li>
+                <a href="#h2-01"> h2タイトルが入ります。 </a>
+              </li>
+              <li></li>
+            </ol>
+          </div>
         </div>
       </article>
       <section>
