FVの微調整とhead内の説明文追加

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>お手本（自然の恵み）</title>
+    <!-- webフォントのCDNここから -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
+    <!-- webフォントのCDNここまで -->
+    <!-- font awesomeのCDNここから -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -17,6 +20,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- font awesomeのCDNここまで -->
+    <!-- ※ font awesomeについては、README.mdをお読みください -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
