お問い合わせセクションの不備修正

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             お仕事のご相談、農園体験、牧場の見学、その他ご質問<br />
             お気軽にお問い合わせください。
           </p>
-          <a class="section-contact__btn btn btn-ja">お問い合わせ</a>
+          <a href="#" class="section-contact__btn btn btn-ja">お問い合わせ</a>
           <p class="section-contact__bottom">
             問い合わせ電話：<br class="sp-only" />
             <span class="section-contact__bottom--large">123-4567-8910</span>
