詳細ページ途中まで

--- a/single.html
+++ b/single.html
@@ -65,24 +65,42 @@
             </div>
           </div>
         </div>
-        <div class="single__container">
-          <div class="single__thumbnail">
-            <img
-              src="./img/no-image.png"
-              width="600"
-              height="391"
-              loading="lazy"
-              alt="タイトルが入ります。タイトルが入ります。"
-            />
-          </div>
-          <div class="toc">
-            <h2 class="toc__heading">目次</h2>
-            <ol>
-              <li>
-                <a href="#h2-01"> h2タイトルが入ります。 </a>
-              </li>
-              <li></li>
-            </ol>
+        <div class="single__container container container-white">
+          <div class="container-second">
+            <div class="single__thumbnail">
+              <img
+                src="./img/no-image.png"
+                width="600"
+                height="391"
+                loading="lazy"
+                alt="タイトルが入ります。タイトルが入ります。"
+              />
+            </div>
+            <div class="toc">
+              <h2 class="toc__heading">目次</h2>
+              <ol class="toc__inner">
+                <li>
+                  <a href="#h2-01" class="toc__h2"> H2タイトルが入ります。 </a>
+                  <ul>
+                    <li>
+                      <a href="#h3-01" class="toc__h3"
+                        >H3タイトルが入ります。H3タイトルが入ります。</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#h2-02" class="toc__h2"> H2タイトルが入ります。 </a>
+                  <ul>
+                    <li>
+                      <a href="#h3-02" class="toc__h3"
+                        >H3タイトルが入ります。H3タイトルが入ります。</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+              </ol>
+            </div>
           </div>
         </div>
       </article>
