--- a/index.html
+++ b/index.html
@@ -27,42 +27,19 @@
       <nav class="header__menu">
         <ul>
           <li>
-            <a href="#" class="header__link"
-              >トップ<span class="sp-only">top</span></a
-            >
+            <a href="#about" class="header__link">私たちについて</a>
           </li>
           <li>
-            <a href="#about" class="header__link"
-              >私たちについて<span class="sp-only">about</span></a
-            >
+            <a href="#introduction" class="header__link">活動紹介</a>
           </li>
           <li>
-            <a href="#introduction" class="header__link"
-              >活動紹介<span class="sp-only">works</span></a
-            >
+            <a href="#faq" class="header__link">よくあるご質問</a>
           </li>
           <li>
-            <a href="#faq" class="header__link"
-              >よくあるご質問<span class="sp-only">faq</span></a
-            >
+            <a href="#" class="header__link">お知らせ</a>
           </li>
           <li>
-            <a href="#" class="header__link"
-              >お知らせ<span class="sp-only">news</span></a
-            >
-          </li>
-          <li>
-            <a href="#access" class="header__link"
-              >アクセス<span class="sp-only">access</span></a
-            >
-          </li>
-          <li class="sp-only">
-            <div class="header__link--tel">
-              お問い合わせ電話<br />
-              <span class="header__link--tel-large">123-4567-8910</span><br />
-              【受付時間】<br />
-              10:00 ~ 18:00（土日祝を除く）
-            </div>
+            <a href="#access" class="header__link">アクセス</a>
           </li>
           <li>
             <a href="#" class="header__link--contact">お問い合わせ</a>
