不要なコード削除

--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="header__logo">
+      <a href="./index.html" class="header__logo">
         <img src="./img/logo.svg" alt="自然の恵み農園" />
       </a>
       <button class="header__btn" type="button">
@@ -38,45 +38,26 @@
       <nav class="header__menu">
         <ul>
           <li>
-            <a href="#" class="header__link"
-              >トップ<span class="sp-only">top</span></a
+            <a href="./index.html#about" class="header__link">私たちについて</a>
+          </li>
+          <li>
+            <a href="./index.html#introduction" class="header__link"
+              >活動紹介</a
             >
           </li>
           <li>
-            <a href="#about" class="header__link"
-              >私たちについて<span class="sp-only">about</span></a
-            >
+            <a href="./index.html#faq" class="header__link">よくあるご質問</a>
           </li>
           <li>
-            <a href="#introduction" class="header__link"
-              >活動紹介<span class="sp-only">works</span></a
-            >
+            <a href="archive.html" class="header__link">お知らせ</a>
           </li>
           <li>
-            <a href="#faq" class="header__link"
-              >よくあるご質問<span class="sp-only">faq</span></a
-            >
+            <a href="./index.html#access" class="header__link">アクセス</a>
           </li>
           <li>
-            <a href="archive.html" class="header__link"
-              >お知らせ<span class="sp-only">news</span></a
+            <a href="./contact.html" class="header__link--contact"
+              >お問い合わせ</a
             >
-          </li>
-          <li>
-            <a href="#access" class="header__link"
-              >アクセス<span class="sp-only">access</span></a
-            >
-          </li>
-          <li class="sp-only">
-            <div class="header__link--tel">
-              お問い合わせ電話<br />
-              <span class="header__link--tel-large">123-4567-8910</span><br />
-              【受付時間】<br />
-              10:00 ~ 18:00（土日祝を除く）
-            </div>
-          </li>
-          <li>
-            <a href="#" class="header__link--contact">お問い合わせ</a>
           </li>
         </ul>
       </nav>
