--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="header__logo">
+      <a href="./index.html" class="header__logo">
         <img src="./img/logo.svg" alt="自然の恵み農園" />
       </a>
       <button class="header__btn" type="button">
@@ -38,45 +38,26 @@
       <nav class="header__menu">
         <ul>
           <li>
-            <a href="#" class="header__link"
-              >トップ<span class="sp-only">top</span></a
+            <a href="./index.html#about" class="header__link">私たちについて</a>
+          </li>
+          <li>
+            <a href="./index.html#introduction" class="header__link"
+              >活動紹介</a
             >
           </li>
           <li>
-            <a href="#about" class="header__link"
-              >私たちについて<span class="sp-only">about</span></a
-            >
+            <a href="./index.html#faq" class="header__link">よくあるご質問</a>
           </li>
           <li>
-            <a href="#introduction" class="header__link"
-              >活動紹介<span class="sp-only">works</span></a
-            >
+            <a href="archive.html" class="header__link">お知らせ</a>
           </li>
           <li>
-            <a href="#faq" class="header__link"
-              >よくあるご質問<span class="sp-only">faq</span></a
-            >
+            <a href="./index.html#access" class="header__link">アクセス</a>
           </li>
           <li>
-            <a href="archive.html" class="header__link"
-              >お知らせ<span class="sp-only">news</span></a
+            <a href="./contact.html" class="header__link--contact"
+              >お問い合わせ</a
             >
-          </li>
-          <li>
-            <a href="#access" class="header__link"
-              >アクセス<span class="sp-only">access</span></a
-            >
-          </li>
-          <li class="sp-only">
-            <div class="header__link--tel">
-              お問い合わせ電話<br />
-              <span class="header__link--tel-large">123-4567-8910</span><br />
-              【受付時間】<br />
-              10:00 ~ 18:00（土日祝を除く）
-            </div>
-          </li>
-          <li>
-            <a href="#" class="header__link--contact">お問い合わせ</a>
           </li>
         </ul>
       </nav>
@@ -152,29 +133,11 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="section-contact container">
-          <h2 class="section-contact__heading">お問い合わせ</h2>
-          <p class="section-contact__text">
-            お仕事のご相談、農園体験、牧場の見学、その他ご質問<br />
-            お気軽にお問い合わせください。
-          </p>
-          <a href="#" class="section-contact__btn btn btn-ja">お問い合わせ</a>
-          <p class="section-contact__bottom">
-            問い合わせ電話：<br class="sp-only" />
-            <span class="section-contact__bottom--large">123-4567-8910</span>
-          </p>
-          <p class="section-contact__bottom">
-            【受付時間】<br class="sp-only" />
-            10:00 ~ 18:00（土日祝を除く）
-          </p>
-        </div>
-      </section>
     </main>
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__info">
-          <a href="#" class="footer__logo">
+          <a href="./index.html" class="footer__logo">
             <img src="./img/logo.svg" alt="自然の恵み農園" />
           </a>
           <address class="footer__info-text">
@@ -189,20 +152,32 @@
         <div class="footer__link">
           <nav class="footer__menu">
             <ul>
-              <li><a href="#" class="footer__link-item">ホーム</a></li>
               <li>
-                <a href="#about" class="footer__link-item">私たちについて</a>
+                <a href="./index.html" class="footer__link-item">ホーム</a>
               </li>
               <li>
-                <a href="#introduction" class="footer__link-item">活動紹介</a>
+                <a href="./index.html#about" class="footer__link-item"
+                  >私たちについて</a
+                >
               </li>
               <li>
-                <a href="#faq" class="footer__link-item">よくあるご質問</a>
+                <a href="./index.html#introduction" class="footer__link-item"
+                  >活動紹介</a
+                >
+              </li>
+              <li>
+                <a href="./index.html#faq" class="footer__link-item"
+                  >よくあるご質問</a
+                >
               </li>
               <li>
                 <a href="./archive.html" class="footer__link-item">お知らせ</a>
               </li>
-              <li><a href="#access" class="footer__link-item">アクセス</a></li>
+              <li>
+                <a href="./index.html#access" class="footer__link-item"
+                  >アクセス</a
+                >
+              </li>
             </ul>
           </nav>
           <ul class="footer__sns">
@@ -235,6 +210,5 @@
       </div>
       <p class="footer__copyright">©︎ shizen-no-megumi-nouen Inc .2023</p>
     </footer>
-    <script src="./js/script.js"></script>
   </body>
 </html>
